--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,15 @@
 
 # Ignore Gradle build output directory
 build
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+.idea
